# MTG-Card-Reader-Web

./: .gitignore  CON_gen_test.py  Cv2Util.py  Identification.py  Model.py  Models.py  MtgJson.py  MtgJsonUtil.py  README.md  Util.py  bottle_app.py  bottle_server.py  cloud_func.py  deck.txt  des.json  features.js  file_test.py  gen_set_files.py  gen_set_files_gatherer.py  gen_set_files_scryfall.py  get_match.py  gmsmatcher.py  http_server.bat  identification.py  index.html  matching.py  matching_test.py  mp.py  open_project.bat  orb_test.py  pool.py  pyproject.toml  run_bottle_server.bat  script.js  set_orb_gen.py  thing.txt
cpp_tests/: helloworld.cpp
jslib/: jsfeat.js
resources/: cardsInfo.json  sets.txt
resources/old/: file_test.py  gen_set_files_gatherer.py  matching_test.py  orb_test.py  scryfall_test.py  styleOLD.css
setDes/: README.md
static/: buttons.js  global.js  index.html  main.css  main.js  matching.js  modal.css  modal.js  notif.css  notif.js  script.js  set_list.css  set_list.js  sets.json  style.css  video.js
static/ChoicesJS/: choices.min.css
