[tool.poetry]
name = "mtg-card-reader-web"
version = "1.0.0"
description = ""
authors = ["Dakota Madden-Fong <maddenfong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.23"
opencv-python = "^4.6.0.66"
numpy = "^1.23.5"
requests = "^2.28.1"
mypy = "^0.991"
types-requests = "^2.28.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
