[tool.poetry]
name = "mtg-card-reader-web"
version = "1.0.0"
description = ""
authors = ["Dakota Madden-Fong <maddenfong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.23"
opencv-python = "^4.6.0.66"
numpy = "^1.23.5"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
types-requests = "^2.28.11.5"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
